assets/css/style.css
@import url("https://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600,700|Playfair+Display:100,200,300,400,500,600,700");
.home-banner {
  width: 100%;
  position: relative;
  background-size: cover;
  background-position: bottom;
  background-color: white;
  z-index: 10;
}

.home-banner img {
  position: absolute;
}

.home-banner__img-right {
  right: 0;
  top: -3rem;
  width: 10rem;
}

.home-banner__img-left {
  left: 0;
  top: -3rem;
  width: 10rem;
}

@media (min-width: 30rem) {
  .home-banner__img-right {
    width: 12rem;
  }
  .home-banner__img-left {
    width: 12rem;
  }
}

.navbar {
  padding-top: 1rem;
  z-index: 999;
}

.navbar-light .navbar-nav .nav-link {
  color: #015a06;
}

.navbar-light .navbar-nav .nav-link:hover {
  text-decoration: underline;
  color: #015a06;
}

.navbar-light .navbar-toggler {
  border-color: #015a06;
}

.navbar-light .navbar-toggler-icon {
  background-image: url("../images/toggler-icon.svg");
}

#logo {
  height: 3rem;
  margin-bottom: 1rem;
}

@media (min-width: 30rem) {
  #logo {
    height: 4rem;
    margin-bottom: 1rem;
  }
}

@media (min-width: 64rem) {
  .navbar-expand-lg .navbar-collapse {
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
  }
}

.main-container {
  padding-top: 12rem;
  margin-bottom: 5rem;
}

.main-container__heading {
  text-align: center;
  color: #015a06;
  font-family: "Playfair Display", serif;
  font-weight: 700;
  font-size: 4rem;
  margin-bottom: 1rem;
}

.main-container p {
  color: #4a4a4a;
  text-align: center;
}

.search-bar-wrapper {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  min-width: 16rem;
}

#recipe-form__search-bar {
  background-color: rgba(74, 74, 74, 0.2);
  width: 100%;
  font-size: 1.6rem;
  border: 0;
  border-radius: 3rem;
  height: 4rem;
  padding: 0 2rem 0.2rem 3rem;
  outline: 0;
  margin-top: 3rem;
}

#recipe-form__search-icon {
  position: absolute;
  top: 4.5rem;
  left: 1rem;
  width: 1.6rem;
  color: #015a06;
}

#recipe-form__clear-icon {
  position: absolute;
  top: 4.5rem;
  right: 0.5rem;
  width: 1.6rem;
  cursor: pointer;
  color: #015a06;
  visibility: hidden;
}

.recipe-form-checkbox {
  margin-top: 3rem;
}

.recipe-form-checkbox label {
  font-size: 1.6rem;
  color: #015a06;
}

.recipe-form-checkbox input {
  margin-right: 1rem;
}

.recipe-form-checkbox__search-button {
  background-color: #015a06;
  width: 10rem;
  height: 4rem;
  font-size: 1.6rem;
  border: 0;
  border-radius: 1rem;
  outline: 0;
  color: white;
  cursor: pointer;
}

.recipe-form-checkbox__search-button:hover {
  background-color: rgba(1, 90, 6, 0.8);
}

.recipe-form-checkbox__search-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  padding-top: 5rem;
}

.recipe-form-checkbox label {
  left: 20%;
}

/* Base for label styling */
[type="checkbox"]:not(:checked),
[type="checkbox"]:checked {
  position: absolute;
  left: -9999px;
}

[type="checkbox"]:not(:checked) + label,
[type="checkbox"]:checked + label {
  position: relative;
  padding-left: 1.95em;
  cursor: pointer;
}

/* checkbox aspect */
[type="checkbox"]:not(:checked) + label:before,
[type="checkbox"]:checked + label:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 1.25em;
  height: 1.25em;
  border: 2px solid rgba(74, 74, 74, 0.3);
  background: #fff;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
          box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
}

/* checked mark aspect */
[type="checkbox"]:not(:checked) + label:after,
[type="checkbox"]:checked + label:after {
  content: '\2713\0020';
  position: absolute;
  top: .15em;
  left: .10em;
  font-size: 1.3em;
  line-height: 0.8;
  color: #015a06;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-family: 'Lucida Sans Unicode', 'Arial Unicode MS', Arial;
}

/* checked mark aspect changes */
[type="checkbox"]:not(:checked) + label:after {
  opacity: 0;
  -webkit-transform: scale(0);
          transform: scale(0);
}

[type="checkbox"]:checked + label:after {
  opacity: 1;
  -webkit-transform: scale(1);
          transform: scale(1);
}

@media (min-width: 30rem) {
  #recipe-form__search-bar {
    width: 80%;
    margin: 0 auto;
    margin-top: 3rem;
  }
  #recipe-form__search-icon {
    left: 8rem;
  }
  #recipe-form__clear-icon {
    right: 7.5rem;
    visibility: hidden;
  }
  .recipe-form-checkbox label {
    left: 35%;
  }
}

@media (min-width: 64rem) {
  #recipe-form__search-bar {
    width: 80%;
    margin: 0 auto;
    margin-top: 3rem;
  }
  #recipe-form__search-icon {
    left: 12.5rem;
  }
  #recipe-form__clear-icon {
    right: 12rem;
    visibility: hidden;
  }
  .recipe-form-checkbox__labels {
    left: 0;
  }
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s;
  transition: background-color 5000s;
  -webkit-text-fill-color: #4a4a4a !important;
}

.card {
  margin: 0 auto;
  margin-bottom: 3rem;
  font-family: "Lato", sans-serif;
  color: #4a4a4a;
}

.card__title {
  margin-top: 1rem;
  font-size: 1.5rem;
  color: #015a06;
  font-weight: 700;
  padding-left: 1rem;
}

.card span {
  font-size: 1.2rem;
  font-weight: 700;
}

.card li {
  font-size: 1.2rem;
}

.card .btn {
  font-size: 1.2rem;
  background-color: #015a06;
  border-color: #015a06;
}

.card__main {
  width: 75%;
}

.inspiration-container__wrapper {
  background-color: white;
  padding: 4rem 0;
  margin: -8rem 0 2rem;
  border-left: 0.4rem solid rgba(1, 90, 6, 0.95);
  border-bottom: 0.4rem solid rgba(1, 90, 6, 0.3);
}
/* ... */

